# util-tui

./: .gitignore  Cargo.toml  logging_config.yaml
src/: app.rs  button.rs  calendar.rs  clock.rs  db.rs  film_tracker.rs  form.rs  get_episodes.py  get_events.py  grade_tracker.rs  grades.json  grades_y1.json  grades_y2.json  ideas.txt  list.rs  main.rs  money_tracker.rs  popup.rs  progress_bar.rs  quickstart.py  screens.rs  search_imdb.py  styles.rs  table.rs  test.py  ui.rs  util.rs  wait_popup.rs
src/migrations/: 20230611175857_todo.sql  20230613145826_transaction.sql  20230704133232_movie.sql  20230704133239_series.sql  20230704133244_episode.sql
