[package]
name = "util-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
chrono = { version = "^0.4.23", features = ["serde"] }
num-traits = "0.2"
serde_json = "^1.0"
serde = { version = "^1.0.152", features = ["derive"] }
figlet-rs = "0.1.4"
lazy_static = "^1.4.0"
log = "^0.4.18"
log4rs = "^1.2.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "sqlite", "macros", "chrono" ] }
tokio = { version = "1", features = ["full"] }

# fixes conflict
quote = "1.0.28"
fuzzy-matcher = "0.3.7"
